--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node --test",
-    "start": "node dist/index.mjs",
+    "start": "node dist/index.mjs -p 3636",
     "build": "tsc"
   },
   "dependencies": {
